# WhiteboardApp

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/dk/scuffed/whiteboardapp/: AspectRatioUnitTest.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/humansegv2generallite/: model.pdmodel
app/src/main/assets/models/humansegv2generalmobile/: model.pdmodel
app/src/main/assets/models/humansegv2portrait/: model.pdmodel
app/src/main/cpp/: GlesHelper.c
app/src/main/res/drawable/: baseline_keyboard_command_key_24.xml  ic_launcher_foreground.xml  round_button.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: accumulation_shader.glsl  binarization_fast_shader.glsl  binarization_shader.glsl  camera_shader.glsl  canny_shader.glsl  change_shader.glsl  corner_shader.glsl  corner_shader_history.glsl  gaussian_shader.glsl  grayscale_shader.glsl  image_shader.glsl  letterboxing_shader.glsl  line_shader.glsl  masked_accumulation_shader.glsl  masking.glsl  masking_shader.glsl  opengl_to_bitmap_shader.glsl  overlay_shader.glsl  passthrough_shader.glsl  saturate_shader.glsl  segment_postprocess_shader.glsl  segment_preprocess_shader.glsl  segmentation_accumulation_shader.glsl  shaderfun.glsl  sobel_shader.glsl  step_shader.glsl  texture.glsl  texture_distortable.glsl  vertex_perspective_correction_shader.glsl  whitebalance_shader.glsl
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+168 files in other folders)
